--- a/publications/iaai21/dora_outlier_detection_iaai.tex
+++ b/publications/iaai21/dora_outlier_detection_iaai.tex
@@ -299,24 +299,24 @@ support vector data description~\cite{pimentel2014review},
 and negative sampling~\cite{sipple:neg-sampling20}.
 
 In astrophysics, 
-outlier detection methods have been employed for identifying astrophysical
+outlier detection methods have been used to identify astrophysical
 objects with unique characteristics~\cite{xiong2010anomaly,
 storey2020anomaly,hayat2021self} as well as data or modeling 
 artifacts in astronomical surveys~\citep{wagstaff:des-anom20,
 lochner2021astronomaly}. 
-Examples of outlier detection applications in 
+Example outlier detection applications in 
 Earth science include detecting anomalous objects or materials
 ~\cite{chang2002anomaly,zhou2016novel}, data artifacts or noise 
 ~\cite{liu2017unsupervised,alvera2012outlier}, change~\cite{zhou2016novel,
 touati2020anomaly}, and ocean extremes~\cite{prochaska2021deep}. 
-Planetary science applications of outlier detection have mostly focused 
+Planetary science applications have mostly focused 
 on prioritizing samples with novel geologic or geochemical features for
 follow-up targeting or analysis~\cite{kerner2020analysis,kerner2020comparison,
 wagstaff:demud13}.
 %
-These examples show the promise of applying outlier detection methods in
+These examples show the benefit of applying outlier detection methods in
 a variety of real-world science use cases. However, the effort required to 
-apply and evaluate the variety of available algorithms is non-trivial and can 
+apply and evaluate the many available algorithms is non-trivial and can 
 be daunting for non-ML experts, thus impeding the uptake of outlier
 detection methods in science applications.  
 There is a need for tools that make it easier for domain scientists to apply
@@ -446,7 +446,7 @@ We provide a module for plotting histograms of outlier scores to visualize the
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.75\linewidth]{figures/doravis.png}
+  \includegraphics[width=0.9\linewidth]{figures/doravis.png}
   \caption{A screenshot of the DORA visualizer displaying results from the
   planetary science dataset.}
   \label{fig:doravis}
@@ -462,6 +462,24 @@ different methods. Figure \ref{fig:doravis} shows a screenshot of the
 side-by-side.
 
 \section{Datasets}
+\begin{table}
+  \caption{Number of samples in the training and test sets for each dataset,
+  ordered by dataset size.}
+  \label{tab:datasets}
+  \centering
+  \begin{tabular}{l|c|cc}
+    \hline
+    Dataset & Training & \multicolumn{2}{c}{Test}\\
+     & Unlabeled &  Outliers &  Inliers \\
+    
+    \hline
+    Planetary & 992 &  9 & 49 \\
+    Earth & 6,757 & 37 & 76  \\
+    F-MNIST & 60,000 & 1,000 & 1,000  \\
+    Astrophysics & 100,000   &  25,339 &  74,661 \\
+    \hline
+  \end{tabular}
+\end{table}
 
 We constructed three datasets to evaluate the utility of DORA and 
 algorithm performance for a variety of scientific domains
@@ -586,25 +604,45 @@ F-MNIST as the training set and a test set of 1,000 images each from MNIST (outl
 %higher outlier scores to samples from MNIST than F-MNIST.
 
 \begin{table}
-  \caption{Number of samples in the training and test sets for each dataset,
-  ordered by dataset size.}
-  \label{tab:datasets}
+  \caption{Precision at $N=n_{outlier}$ for three applications and F-MNIST
+   benchmark; the best result for each data set is in bold.}
+  \label{tab:faw_results}
   \centering
-  \begin{tabular}{l|c|cc}
+  \begin{tabular}{l|cccc}
     \hline
-    Dataset & Training & \multicolumn{2}{c}{Test}\\
-     & Unlabeled &  Outliers &  Inliers \\
-    
+    Algorithm & Astro. & Earth & Planetary & F-MNIST \\
     \hline
-    Planetary & 992 &  9 & 49 \\
-    Earth & 6,757 & 37 & 76  \\
-    F-MNIST & 60,000 & 1,000 & 1,000  \\
-    Astrophysics & 100,000   &  25,339 &  74,661 \\
+    PCA               & \textbf{0.42} & 0.41 & 0.44 & \textbf{0.84} \\
+    DEMUD             & ---- & 0.41 & 0.44 & \textbf{0.84} \\
+    \hline
+    RX                & 0.40 & 0.43 & ---- & 0.82 \\
+    LRX               & ----& ---- & 0.33 & 0.56 \\
+    \hline
+    Iso. Forest  & 0.34 & 0.46 & \textbf{0.56} & 0.74 \\
+    \hline
+    PAE               & 0.35 & 0.41 & 0.44 & 0.83 \\
+    Neg. Sampling & 0.32 & \textbf{0.49} & 0.33 & 0.43 \\
+    \hline
+    Random            & 0.25 & 0.32 & 0.14 & 0.50 \\
     \hline
   \end{tabular}
 \end{table}
 
 \section{Results}
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    planetary rover dataset.}
+    \label{fig:planetary_results}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{figures/faw_combined_plot.pdf}
+    \caption{Number of true outliers ranked in top $N$ selections for 
+    Earth science dataset.}
+    \label{fig:faw_results}
+\end{figure}
 The experimental setup for each dataset was to fit or train a model for
 each ranking algorithm using a larger unlabeled dataset and then apply 
 the models to compute the outlier scores for a smaller test dataset for which
@@ -671,56 +709,12 @@ For the MNIST and F-MNIST dataset, PCA and DEMUD tied for the highest
 while DEMUD, PCA, and PAE tied for the highest MDR. Negative sampling had the 
 lowest performance in both metrics. 
 
-\begin{table}
-  \caption{Precision at $N=n_{outlier}$ for three applications and F-MNIST
-   benchmark; the best result for each data set is in bold.}
-  \label{tab:faw_results}
-  \centering
-  \begin{tabular}{l|cccc}
-    \hline
-    Algorithm & Astro. & Earth & Planetary & F-MNIST \\
-    \hline
-    PCA               & \textbf{0.42} & 0.41 & 0.44 & \textbf{0.84} \\
-    DEMUD             & ---- & 0.41 & 0.44 & \textbf{0.84} \\
-    \hline
-    RX                & 0.40 & 0.43 & ---- & 0.82 \\
-    LRX               & ----& ---- & 0.33 & 0.56 \\
-    \hline
-    Iso. Forest  & 0.34 & 0.46 & \textbf{0.56} & 0.74 \\
-    \hline
-    PAE               & 0.35 & 0.41 & 0.44 & 0.83 \\
-    Neg. Sampling & 0.32 & \textbf{0.49} & 0.33 & 0.43 \\
-    \hline
-    Random            & 0.25 & 0.32 & 0.14 & 0.50 \\
-    \hline
-  \end{tabular}
-\end{table}
-
-
 \begin{figure}
     \centering
     \includegraphics[width=\linewidth]{figures/des_combined_plot.pdf}
     \caption{Number of true outliers ranked in top $N$ selections for 
     the astrophysics (DES) dataset.}
     \label{fig:des_results}
-\end{figure}
-
-
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{figures/planetary_combined_plot.pdf}
-    \caption{Number of true outliers ranked in top $N$ selections for 
-    planetary rover dataset.}
-    \label{fig:planetary_results}
-\end{figure}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=\linewidth]{figures/faw_combined_plot.pdf}
-    \caption{Number of true outliers ranked in top $N$ selections for 
-    Earth science dataset.}
-    \label{fig:faw_results}
 \end{figure}
 
 \begin{figure}
@@ -734,7 +728,8 @@ lowest performance in both metrics.
 
 \section{Discussion}
 
-\paragraph{Algorithm performance.} There was no one algorithm that 
+\paragraph{Algorithm performance.} 
+There was no one algorithm that 
  had the best performance across all four datasets. PCA had
 the best performance for the astrophysics and F-MNIST datasets, 
 while negative sampling and isolation forest was best for
@@ -749,7 +744,8 @@ practice and sense and left hyperparameter tuning, which would likely
 improve results for each dataset but would require
 creation of additional validation sets, for future work.
  
-\paragraph{Evaluation in outlier detection.} Prior work has emphasized
+\paragraph{Evaluation in outlier detection.} 
+Prior work has emphasized
 the difficulty of creating standardized metrics for outlier detection that 
 represents how models will perform in real world settings while also enabling
 intercomparison between datasets~\cite{campos2016evaluation}. We chose two
@@ -769,17 +765,44 @@ were not known to be inliers or outliers. This can result in evaluation metrics
  outliers (as was found to be common in prior work~\cite{wagstaff:des-anom20})
  are counted as false positives. 
 
-\paragraph{Path to deployment.} \todo{Hannah - describe pip-installable
-package, open-source for extension by the wider scientific community, etc.}
+\paragraph{Path to deployment.} 
+Our goal is for DORA to enable increased application and benefit of
+outlier detection methods in real-world scientific use cases. We have 
+designed DORA to make it as easy as possible for scientists to apply
+algorithms and to compare and interpret their results; users need only
+to specify the specifics of their data (e.g., path, data type) in a 
+configuration file to start running experiments and seeing results. We will
+make DORA publicly available as a pip-installable package to make it
+easy to integrate into existing scientific workflows. 
+The source code and example datasets used in this study will also be 
+open-sourced, enabling DORA to be improved and expanded by the 
+machine learning and domain science communities. 
+In addition, DORA will be infused into the scientific workflows for the
+three use cases we demonstrated results for in this study.
+%the use cases from this will also lead to infusion in real scenarios
 
-\section{Conclusions}
-\todo{
-Summarize conclusions and plans for future work
-[Note that these datasets could also be used by other researchers as OOD
- benchmark tasks?]
- \todo{Can we make any of these datasets publicly available with the paper?}
- \todo{Future work: other algorithms, datasets, causal graphs.}
-}
+\section{Conclusion}
+The ability to automatically find outliers in large datasets is critical
+for a variety of scientific and real-world use cases. 
+We presented Domain-agnostic Outlier Ranking Algorithms (DORA),
+a configurable pipeline that facilitates application and evaluation of
+outlier detection methods in a variety of domains. DORA minimizes the
+coding and ML expertise required for domain scientists since users
+need only to specify their experiment details in a configuration file
+to get results from all available algorithms. This is particularly important
+because the experiments for three cross-domain science datasets in this
+study showed that no one algorithm performs best for all datasets.
+DORA will be publicly accessible as a python package to make it
+easy to integrate into existing scientific workflows. 
+The will be
+open-sourced to enable continued improvement and expansion of DORA
+to serve the needs of the science community. The datasets used in this
+study will also be public and can serve as real-world benchmarks 
+for future outlier detection methods. In future work, we will
+continue to improve DORA based on the experience of deploying it in
+the workflows of the domain scientists associated with the datasets in
+this study and add additional interpretation modules 
+including causal inference graphs.
 
 \bibliography{dora_references}
 
